-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.1.2, Qt Creator 3.2.0-beta1
-
None
If you use Alt+Left to go back in the navigation history a tooltip might be displayed if the position you get back to is inside an identifier (e.g. for the cpp editor).
- This is probably not intended.
- In case of the cppeditor, this makes the UI sluggish since CppHoverHandler::identifyMatch() might become quite expensive due to the calls into Core::HelpManager::linksForIdentifier().
Reproduce:
- Open cppeditor.cpp.
- Find the line "this, SLOT(updateSemanticInfo(CppTools::SemanticInfo)));" and position the cursor on "updateSemanticInfo".
- Hit F2.
- Now hit Alt+Left (and immediately the e.g. Down-Arrow to experience the sluggishness)
Actual: Tooltip is shown.
Expected: Tooltip is not shown.
- relates to
-
QTCREATORBUG-12262 Qt Creator UI hangs randomly
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-12382 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 87354,2 | Editor: Don't show help popups when alt was part of a shortcut. | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |