Editor: Don't show help popups when alt was part of a shortcut.

Task-number: QTCREATORBUG-12382
Change-Id: I2825f8197dbac1f1ef805892dc1191df86b84dbb
Reviewed-by: Eike Ziller <eike.ziller@digia.com>